[DGPB-1119] Upgrade to metabase 0.29.4 (#38)
* [DGPB-1119] Upgrade to metabase 0.29.4